Update title and font family in index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Juan V — Art</title>
+  <title>Juan Pedro Vallejo — Art</title>
 
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: Helvetica, sans-serif;
       background: #ffffff;
       color: #000000;
     }
