--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 <body>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="bio.html">Bio</a>
+    <a href="index.html">INIT</a>
+    <a href="bio.html">WHO</a>
     <a href="explorations.html">Explorations</a>
   </nav>
 
   <div class="content">
-    <h1>Juan V</h1>
+    <h1>Juan Pedro Vallejo</h1>
     <p>
-      Personal space for visual experiments, generative systems and artworks.
+      VVVISUAL EXPLORER
     </p>
   </div>
 
