--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
   <nav>
     <a href="index.html">INIT</a>
-    <a href="bio.html">WHO</a>
-    <a href="explorations.html">Explorations</a>
+    <a href="who.html">WHO</a>
+    <a href="art.html">ART</a>
   </nav>
 
   <div class="content">
     <h1>Juan Pedro Vallejo</h1>
     <p>
-      VVVISUAL EXPLORER
+      ARTIST
     </p>
   </div>
 
