Update title and navigation structure in index.html

--- a/index.html
+++ b/index.html
@@ -2,176 +2,109 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Vallejo</title>
-
-<!-- P5 -->
-<script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
+<title>Juan Pedro Vallejo</title>
 
 <style>
-body {
-  margin: 0;
-  font-family: Helvetica, sans-serif;
-  overflow: hidden;
-}
+  body {
+    margin: 0;
+    font-family: Helvetica, sans-serif;
+    overflow: hidden;
+  }
 
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  gap: 20px;
-  padding: 20px;
-  background: white;
-  border-bottom: 1px solid #ddd;
-  z-index: 10;
-}
+  nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    background: white;
+    z-index: 10;
+  }
 
-nav a {
-  text-decoration: none;
-  color: black;
-}
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
 
-.container {
-  height: 100vh;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
-}
+  .section {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+  }
 
-.section {
-  height: 100vh;
-  scroll-snap-align: start;
+  #init { background: #e3e3ff; }
+  #who { background: #ffe3e3; }
+  #art { background: #e3ffe3; }
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
+  #p5-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 
-/* WHO y ART quedan con color de prueba */
-#who  { background: #4d7fff; }
-#art  { background: #4dff88; }
-
-/* el canvas de p5 */
-#p5-holder {
-  position: absolute;
-  inset: 0;
-}
 </style>
 </head>
 
 <body>
 
 <nav>
-  <a href="#init">INIT</a>
-  <a href="#who">WHO</a>
-  <a href="#art">ART</a>
+  <a onclick="goTo(0)">INIT</a>
+  <a onclick="goTo(1)">WHO</a>
+  <a onclick="goTo(2)">ART</a>
 </nav>
 
-<div class="container" id="scroller">
+<div id="wrapper">
+  <div class="section" id="init">
+    <div id="p5-container"></div>
+  </div>
 
-  <section class="section" id="init">
-    <div id="p5-holder"></div>
-  </section>
+  <div class="section" id="who">
+    WHO
+  </div>
 
-  <section class="section" id="who">WHO</section>
-
-  <section class="section" id="art">ART</section>
-
+  <div class="section" id="art">
+    ART
+  </div>
 </div>
 
-<!-- ================= TU SKETCH ================= -->
-<script>
-
-let s;
-let DIM = Math.min(window.innerWidth, window.innerHeight);
-let asp = 1/1;
-
-let r;
-let tokenData = genTokenData(123);
-let tokenData2 = {
-  hash: "0xc144330ad3cbb9ef2fc39bfa89099338ad16457444074575ff94051043b91f92",
-  tokenId: "15000000"
-};
-
-function genTokenData(projectNum) {
-  let data = {};
-  let hash = "0x";
-  for (var i = 0; i < 64; i++) {
-    hash += Math.floor(Math.random() * 16).toString(16);
-  }
-  data.hash = hash;
-  data.tokenId = (projectNum * 1000000 + Math.floor(Math.random() * 600)).toString();
-  return data;
-}
-
-let uniformPasser;
-
-function setup() {
-
-  const holder = document.getElementById("p5-holder");
-  const w = holder.offsetWidth;
-  const h = holder.offsetHeight;
-
-  const cnv = createCanvas(w, h, WEBGL);
-  cnv.parent("p5-holder");
-
-  r = new Random(tokenData2);
-
-  pixelDensity(2);
-  rectMode(CENTER);
-
-  s = createShader(
-  `
-  attribute vec3 aPosition;
-  attribute vec2 aTexCoord;
-  varying vec2 vTC;
-
-  void main() {
-    vec4 positionVec4 = vec4(aPosition, 1.0);
-    vTC=aTexCoord;
-    positionVec4.xy = positionVec4.xy * 2.0 - 1.0;
-    gl_Position = positionVec4;
-  }`,
-  `
-  precision highp float;
-  uniform vec2 resolution;
-
-  void main() {
-    vec2 uv = gl_FragCoord.xy / resolution.xy;
-    gl_FragColor = vec4(uv.x, uv.y, 0.5, 1.0);
-  }`
-  );
-
-}
-
-function draw() {
-  shader(s);
-  rect(0,0,width,height);
-}
-
-function windowResized() {
-  const holder = document.getElementById("p5-holder");
-  resizeCanvas(holder.offsetWidth, holder.offsetHeight);
-}
-
-</script>
-
-<!-- ============================================= -->
+<script src="p5.min.js"></script>
+<script src="Random.js"></script>
+<script src="sketch.js"></script>
 
 <script>
-// bloqueo de scroll hacia abajo al llegar a ART
-const scroller = document.getElementById("scroller");
+let current = 0;
+let isMoving = false;
 
-scroller.addEventListener("wheel", (e) => {
-  const h = window.innerHeight;
-  const maxScroll = h * 2;
+function goTo(i) {
+  current = constrain(i, 0, 2);
+  window.scrollTo({
+    top: window.innerHeight * current,
+    behavior: "smooth"
+  });
+}
 
-  if (scroller.scrollTop >= maxScroll && e.deltaY > 0) {
-    e.preventDefault();
-  }
-}, { passive: false });
+window.addEventListener("wheel", (e) => {
+  if (isMoving) return;
+
+  if (e.deltaY > 0) current++;
+  else current--;
+
+  current = constrain(current, 0, 2);
+
+  isMoving = true;
+  goTo(current);
+
+  setTimeout(() => isMoving = false, 900);
+});
+
+function constrain(v, a, b) {
+  return Math.max(a, Math.min(b, v));
+}
 </script>
 
 </body>
