--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </div>
 </div>
 
-<script src="p5.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
 <script src="Random.js"></script>
 <script src="sketch.js"></script>
 
