--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   #who { background: #ffe3e3; }
   #art { background: #e3ffe3; }
 
-  #p5-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
+#p5-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
 </style>
 </head>
