--- a/index.html
+++ b/index.html
@@ -5,48 +5,48 @@
 <title>Juan Pedro Vallejo</title>
 
 <style>
-  body {
-    margin: 0;
-    font-family: Helvetica, sans-serif;
-    overflow: hidden;
-  }
+body {
+  margin: 0;
+  font-family: Helvetica, sans-serif;
+  overflow: hidden;
+}
 
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    gap: 20px;
-    padding: 20px;
-    background: white;
-    z-index: 10;
-  }
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  background: white;
+  z-index: 10;
+}
 
-  nav a {
-    text-decoration: none;
-    color: black;
-  }
+nav a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
 
-  .section {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 40px;
-  }
+.section {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
 
-  #init { background: #e3e3ff; }
-  #who { background: #ffe3e3; }
-  #art { background: #e3ffe3; }
+#init { background: #e3e3ff; }
+#who  { background: #ffe3e3; }
+#art  { background: #e3ffe3; }
 
 #p5-container {
   width: 100%;
   height: 100%;
   position: relative;
 }
-
 </style>
 </head>
 
@@ -59,6 +59,7 @@
 </nav>
 
 <div id="wrapper">
+
   <div class="section" id="init">
     <div id="p5-container"></div>
   </div>
@@ -70,41 +71,88 @@
   <div class="section" id="art">
     ART
   </div>
+
 </div>
 
+<!-- LIBS -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.9.4/lib/p5.min.js"></script>
 <script src="Random.js"></script>
 <script src="sketch.js"></script>
 
+<!-- SCROLL SYSTEM -->
 <script>
 let current = 0;
 let isMoving = false;
 
+// ───────────────── CONFIG ─────────────────
+const SCROLL_THRESHOLD = 90;   // más alto = scroll más pesado
+const ANIM_TIME = 750;
+// ───────────────────────────────────────────
+
 function goTo(i) {
-  current = constrain(i, 0, 2);
+  current = Math.max(0, Math.min(2, i));
+
   window.scrollTo({
     top: window.innerHeight * current,
     behavior: "smooth"
   });
 }
 
+// ===== DESKTOP / TRACKPAD =====
+let wheelAccum = 0;
+
 window.addEventListener("wheel", (e) => {
   if (isMoving) return;
 
-  if (e.deltaY > 0) current++;
+  wheelAccum += e.deltaY;
+
+  if (Math.abs(wheelAccum) < SCROLL_THRESHOLD) return;
+
+  if (wheelAccum > 0) current++;
   else current--;
 
-  current = constrain(current, 0, 2);
+  wheelAccum = 0;
 
   isMoving = true;
   goTo(current);
 
-  setTimeout(() => isMoving = false, 900);
+  setTimeout(() => isMoving = false, ANIM_TIME);
 });
 
-function constrain(v, a, b) {
-  return Math.max(a, Math.min(b, v));
-}
+
+// ===== MOBILE TOUCH =====
+let touchStartY = 0;
+let touchDelta = 0;
+
+window.addEventListener("touchstart", (e) => {
+  touchStartY = e.touches[0].clientY;
+});
+
+window.addEventListener("touchmove", (e) => {
+  touchDelta = e.touches[0].clientY - touchStartY;
+});
+
+window.addEventListener("touchend", () => {
+  if (isMoving) return;
+
+  if (Math.abs(touchDelta) < 60) return;
+
+  if (touchDelta < 0) current++;
+  else current--;
+
+  isMoving = true;
+  goTo(current);
+
+  setTimeout(() => isMoving = false, ANIM_TIME);
+
+  touchDelta = 0;
+});
+
+
+// ===== FIX AL ROTAR / RESIZE =====
+window.addEventListener("resize", () => {
+  goTo(current);
+});
 </script>
 
 </body>
